@@ -95,7 +95,7 @@ public class FrameTransformTest extends AutomatedTestBase
 		
 		//check correct result (nnz 7 + 0 -> 8 distinct vals)
 		for( double[][] data : Yset )
-			Assert.assertEquals("Wrong result: "+data[0][0]+".", new Double(8), new Double(data[0][0]));
+			Assert.assertEquals("Wrong result: "+data[0][0]+".", Double.valueOf(8), Double.valueOf(data[0][0]));
 	}
 
 	private static ArrayList<double[][]> execDMLScriptviaJMLC( String testname, String[][] X, String[][] M, boolean modelReuse) 
